Now with a way to disable that feature.

--- a/Localization/Automaton/ru_ru/Features.ru_ru.txt
+++ b/Localization/Automaton/ru_ru/Features.ru_ru.txt
@@ -33,3 +33,6 @@ Scripts/Automaton/Features/FeatureAutoWoodcutting@Description:
 
 Scripts/Automaton/Features/FeatureAutoWoodcutting@ChopOnlyFullyGrownText:
 Рубить только полностью выросшие деревья
+
+Scripts/Automaton/Features/ProtoFeatureAutoHarvest@IsWalkingEnabledText:
+Идти к ближайшей видимой цели
