Now with autowatering helper. Can get glitched sometimes over a single plant, though. :/

--- a/Localization/Automaton/ru_ru/Features.ru_ru.txt
+++ b/Localization/Automaton/ru_ru/Features.ru_ru.txt
@@ -36,3 +36,9 @@ Scripts/Automaton/Features/FeatureAutoWoodcutting@ChopOnlyFullyGrownText:
 
 Scripts/Automaton/Features/ProtoFeatureAutoHarvest@IsWalkingEnabledText:
 Идти к ближайшей видимой цели
+
+Scripts/Automaton/Features/FeatureAutoWatering@Name:
+АвтоПоливайка
+
+Scripts/Automaton/Features/FeatureAutoWatering@Description:
+Автоматически полтивает грядки, если лейка в руках.
