Debug line drawer

--- a/Localization/Automaton/ru_ru/Features.ru_ru.txt
+++ b/Localization/Automaton/ru_ru/Features.ru_ru.txt
@@ -40,6 +40,9 @@ Scripts/Automaton/Features/ProtoFeatureAutoHarvest@IsWalkingEnabledText:
 Scripts/Automaton/Features/ProtoFeatureAutoHarvest@ShouldCheckVisibilityText:
 Идти только к видимой цели. Работает криво
 
+Scripts/Automaton/Features/ProtoFeatureAutoHarvest@DrawDebugLinesText:
+Рисовать отладочные линии
+
 Scripts/Automaton/Features/FeatureAutoWatering@Name:
 АвтоПоливайка
 
